--- a/src/page/nav/Nav.css
+++ b/src/page/nav/Nav.css
@@ -1,5 +1,6 @@
 .wrapper{
     display: flex;
+    flex-direction: row;
 }
 .flex-item-content{
     width: 100%;
@@ -9,5 +10,38 @@
 }
 .main-content{
     background-color: #f5f5f5;
-    height: calc(100vh + 30px);
+    height: calc(100vh + 45px);
+}
+.hamburger {
+    border: 0;
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
+    /* transition: background-color 0.2s ease-in-out; */
+    right: 25px;
+    display: none;
+  }
+
+@media screen and (max-width: 768px) {
+    .wrapper{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .hamburger{
+        display: block;
+    }
+    .items {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .hidden {
+        display: none;
+    }
+    .menu-icon{
+        padding: 5px  5px 0 0;
+        float: right;
+    }
 }
