--- a/src/page/nav/Navbar.css
+++ b/src/page/nav/Navbar.css
@@ -4,7 +4,7 @@
     color: #fff;
     font-weight: 700;
 }
-.nav-menu{
+.nav-menu .menu{
     display: flex;
     flex-direction: column;
     padding: 50px 100px;
@@ -12,9 +12,34 @@
     width: 200px;
     height: 100vh;
 }
-@media screen and (max-width: 680px) {
-    .nav-menu{
-        padding: 0;
 
+@media screen and (max-width: 768px) {
+    .nav-menu{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        background-color: #fff;
+        color: black;
+        justify-content: center;
     }
+    .nav-menu .menu{
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100%;
+        height: calc(100vh + 50px);
+        background-color: #233044;
+        border-top: 1px solid black;
+        padding: 0;
+    }
+    .navlink{
+        color: #fff;
+        width: 100%;
+        padding: 1.5rem 0;
+        font-size: 16px;
+        text-align: center;
+    }
+
+
+
 }
