--- a/src/component/qrcode/styles.css
+++ b/src/component/qrcode/styles.css
@@ -1,3 +1,9 @@
 .camera{
     width: 350px;
 }
+@media screen and (max-width: 768px) {
+    .camera{
+        width: 100vw;
+        height: 300px;
+    }
+}
